# MCPBLENDER

./: .gitignore  README.md  debug_smoke.py  demo_core_loop.py  pyproject.toml
blender_addon/mcpblender_addon/: __init__.py
blender_addon/mcpblender_addon/actions/: __init__.py  core_actions.py
blender_addon/mcpblender_addon/bridge_http/: __init__.py  server.py
blender_addon/mcpblender_addon/snapshot/: __init__.py  light_snapshot.py
docs/: CONTEXT.md  MVP_INTEGRATION.md  PROTOCOL.md  SNAPSHOT_SPEC.md  TOOLS_CORE.md
runtime_blender/: http_runtime_server.py  modeling_api.py
scripts/: demo_tools_via_bridge.py  run_blender_bridge.ps1  run_runtime_http.ps1  run_server.ps1  smoke_modeling_http.ps1  smoke_runtime_http.ps1
server_mcp/: README.md  pyproject.toml
server_mcp/src/mcpblender_server/: __init__.py  mcp_stdio.py  schema.py  server.py  state.py
server_mcp/src/mcpblender_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server_mcp/src/mcpblender_server/bridge_client/: __init__.py  http_bridge.py
server_mcp/src/mcpblender_server/tools/: __init__.py
tests/: test_bridge_http_envelope.py  test_contract_errors.py  test_core_actions_rotation.py  test_runtime_http_server_helpers.py  test_server_tools.py
tests_headless/: smoke.py
