[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpblender-server"
version = "0.1.0"
description = "MCPBLENDER core MCP stdio server routing to Blender HTTP bridge"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "aresnake" }]
dependencies = ["httpx>=0.27", "pydantic>=2.7"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mcpblender-server = "mcpblender_server.server:main"